--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto-js": "^4.2.0",
     "mapped-type": "nestjs/mapped-types",
     "mongoose": "^8.0.2",
+    "okx-api-connect": "^1.0.6",
     "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -77,5 +78,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": "20.9.0"
   }
 }
