--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "crypto-js": "^4.2.0",
     "mapped-type": "nestjs/mapped-types",
     "mongoose": "^8.0.2",
-    "okx-api-connect": "^1.0.6",
+    "okx-api-connect": "^1.0.7",
     "prisma": "^5.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
@@ -80,6 +80,6 @@
     "testEnvironment": "node"
   },
   "engines": {
-    "node": "20.9.0"
+    "node": ">=20.0.0 <21.0.0"
   }
 }
